Correction contraste

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #B9572D;
+    background-color: #874021;
 }
 
 .tc-white {
@@ -779,7 +779,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #B9572D;
+    background: #874021;
     color: #FFFFFF!important;
 }
 
